SACAR EL FORM QUERI Y AGREGAR EL HEADER WRAO

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -338,8 +338,8 @@ footer .redes {
 	max-width: 30px;
 }
 @media (max-width: 768px) {
-    .form {
-        min-width: 100%;
+	header {
+        flex-wrap: wrap;
     }
 	.principal{
 		height: 281px;
