--- a/css/estilos.css
+++ b/css/estilos.css
@@ -117,7 +117,7 @@ section{
 .principal{
 	width: 100%;
 	height: 750px;
-	background-image: url(../images/HOME-MANDALORIAN2.jpg);
+	background-image: url(../images/HOME-MANDALORIAN2.webp);
 	background-size: cover;
 	background-repeat: no-repeat;
 	display: flex;
