--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,7 +10,7 @@
 body{
 	font-family: 'Rubik', sans-serif;
 	background-position: 70% 10%;
-	background-image: url(../images/fondo.jfif);
+	background-image: url(../images/fondo.webp);
 }
 header{
 	padding-top: 2%;
