--- a/css/estilos.css
+++ b/css/estilos.css
@@ -432,6 +432,13 @@ footer .redes {
 		top: 0;
 		z-index: 1;
 	}
+	.principal{
+		height: 200px;
+		
+	}
+	.secundario div a img {
+		height: 150px;
+	}
 	.galeria-ct {
 		grid-template-columns: repeat(1, 1fr);
 	}
