--- a/css/estilos.css
+++ b/css/estilos.css
@@ -56,13 +56,13 @@ nav ul li a{
 	font-size: 1.2rem;
 	padding-right: 2rem;
 	text-transform: uppercase;
+	width: 140px;
 	background-color: #000000;
-	/* border-radius: 20px; */
 	padding: 8px;
 	display: block
 }
 nav ul li a:hover{
-	transform: translateY(3px);
+	/* transform: translateY(3px); */
 	/* font-weight: 850; */
 	background-color: rgba(255, 139, 50, 0.25);
 	/* border-radius: 20px; */
@@ -107,11 +107,13 @@ section{
     display: grid;
     gap: 10px;
     grid-template-columns: repeat(3, 1fr);
+	background-image: url(../images/vertical_dark_Batman_Yoda_Mandalorian.jpg!d);
+	background-size: contain;
 }
 .galeria-ct a img:hover {
     overflow: hidden;
     background-color: rgb(0, 0, 0);
-    border: 1px solid #fff;
+    border: 2px solid rgb(152, 81, 30);
     border-radius: 10px;
 }
 .principal{
@@ -156,12 +158,6 @@ section{
 	justify-content:center;
 	background-color: rgb(0, 0, 0, 0);
 }
-.reseñas:hover{
-	transform: translateY(5px);
-	border: 1px solid #fff;
-	border-radius: 8px;
-}
-
 .redes a img:hover{
 	max-width: 3.5rem; 
 }
@@ -208,6 +204,7 @@ section{
 	text-align: center;
 	padding : 15px 0px 15px 0px; 
 	font-size: 1.4rem;
+	color: rgb(152, 81, 30);
 }
 .personajes-ct p{
 	padding: 0px 10px 0px 10px;
@@ -290,7 +287,15 @@ textarea {
 .secundario .personajes {
     display: grid; 
     justify-items: center;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    text-align: center;
+    gap: 10px;
+    width: 100%;
+}
+.secundario .reseñas {
+    display: grid; 
+    justify-items: center;
+    grid-template-columns: repeat(1, 1fr);
     text-align: center;
     gap: 10px;
     width: 100%;
@@ -300,14 +305,25 @@ textarea {
     padding: 0% 3% 3%;
     text-align: center;
 }
-.secundario div a img{
-	width: 100%;
-	border-radius: 10px;
-	height: 220px;
+.secundario div a img {
+    width: 100%;
+    border-radius: 10px;
+    height: 220px;
+}
+.secundario .galeria-ct a img {
+    width: 100%;
+    border-radius: 10px;
+    height: 220px;
+    border: 1px solid #fff;
+}
+/* ------------------------------------------------------------------------------------------------------- */
+.secundario .galeria-ct a img:hover { 
+    border-radius: 10px;
+    border: 1px solid rgb(152, 81, 30);
 }
 .imgsInicio:hover{
 	transform: translateY(3px);
-	background-color: rgba(28, 28, 28, 0.2);
+	background-color: rgba(28, 28, 28, 0.5);
 	border-radius: 8px;
 	border: 1px solid #fff;
 }
