--- a/css/estilos.css
+++ b/css/estilos.css
@@ -26,7 +26,10 @@ header{
 
 }
 h1{
-	font-size: 1.5rem;
+	/* font-size: 1.5rem; */
+	
+	font-size: 4rem;
+    color: #f69a00;
 }
 #menu_bar{
 	display: flex;
@@ -157,6 +160,7 @@ section{
 	width: 100%;
 	height: 50px;
 	display: flex;
+	margin: 20px;
 	align-items: center;
 	justify-content:center;
 	background-color: rgb(0, 0, 0, 0);
