--- a/css/estilos.css
+++ b/css/estilos.css
@@ -320,7 +320,7 @@ textarea {
     width: 100%;
     border-radius: 10px;
     height: 220px;
-    border: 1px solid #fff;
+    border: 5px solid #e782008a;
 }
 /* ------------------------------------------------------------------------------------------------------- */
 .secundario .galeria-ct a img:hover { 
