--- a/css/estilos.css
+++ b/css/estilos.css
@@ -191,11 +191,13 @@ section{
     flex-wrap: wrap;
     padding: 20px;
 }
-.historia-ct{
-	display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding: 20px;
+.secundario .historia-ct{
+	display: grid;
+	justify-items: center;
+	grid-template-columns: repeat(2, 1fr);
+	text-align: center;
+	gap: 30px;
+	width: 100%;
 }
 .personajes-ar a div{
 	overflow: hidden;
