--- a/css/estilos.css
+++ b/css/estilos.css
@@ -399,6 +399,9 @@ footer .redes {
 	.secundario .personajes {
 		grid-template-columns: repeat(2, 1fr);	
 	}
+	.secundario .historia-ct {
+		grid-template-columns: repeat(1, 1fr);
+	}
 	input, textarea {
 		padding: 10px;
 		width: 440px;
