--- a/css/estilos.css
+++ b/css/estilos.css
@@ -460,8 +460,9 @@ footer .redes {
 		z-index: 1;
 	}
 	.principal{
-		background-image: url(../images/the\ mandalorian\ adaptable.jpg);	 
-	}
+		height: 200px;
+		background-image: url(../images/the\ mandalorian\ adaptable.jpg);	
+	} 
 	.secundario div a img {
 		height: 150px;
 	}
