--- a/css/estilos.css
+++ b/css/estilos.css
@@ -461,7 +461,7 @@ footer .redes {
 	}
 	.principal{
 		height: 200px;
-		background-image: url(../images/the\ mandalorian\ adaptable.jpg);	
+		background-image: url(../images/the_mandalorian_adaptable_celu.jpg);	
 	} 
 	.secundario div a img {
 		height: 150px;
