--- a/css/estilos.css
+++ b/css/estilos.css
@@ -459,7 +459,7 @@ footer .redes {
 		z-index: 1;
 	}
 	.principal{
-		height: 400px;
+		height: 480px;
     	background-image: url(../images/the_mandalorian_adaptable_celu.jpg);
     	border-radius: 20px;
 	}
@@ -478,7 +478,7 @@ footer .redes {
 	.input {
 		width: 300px;
 	}
-	video{
+	/* video{
 		display: none;
-	}
+	} */
 }
