--- a/css/estilos.css
+++ b/css/estilos.css
@@ -311,7 +311,7 @@ textarea {
 .secundario div{
 	width: 100%;
     padding: 0% 3% 3%;
-    text-align: center;
+    text-align: justify;
 }
 .secundario div a img {
     width: 100%;
