--- a/css/estilos.css
+++ b/css/estilos.css
@@ -159,7 +159,7 @@ section{
 	background-color: rgb(0, 0, 0, 0);
 }
 .redes a img:hover{
-	max-width: 3.5rem; 
+	transform: translatey(6px);
 }
 
 /*-------------------------------------PERSONAJES---------------------------------------*/
@@ -368,6 +368,7 @@ footer .redes {
 	justify-content:center;
 	align-items: center;
 	height: 80px;
+	gap: 20px;
 }
 .copyright-ct{
 	display:flex; 
