--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,6 +8,9 @@
 	width: 0px;
 	height: 0px;
 }
+p{
+    text-align: justify;
+}
 body{
 	font-family: 'Rubik', sans-serif;
 	background-position: 70% 10%;
